--- a/examples/index.html
+++ b/examples/index.html
@@ -4,6 +4,11 @@
 	<meta charset="UTF-8">
 	<title>Boolean Search Test</title>
 	<style>
+		hr {
+			border-top: 1px solid #efefef;
+			border-style: solid;
+			margin: 0;
+		}
 		input {
 			width: 50%;
 		}
@@ -13,6 +18,7 @@
 			justify-content: center;
 			font-size: 1.25rem;
 			height: 150px;
+			flex-wrap: wrap;
 		}
 		.output span {
 			margin-left: 3px;
@@ -27,7 +33,7 @@
 			background-color: orange;
 			color: black;
 		}
-		.operator {
+		.success, .operator {
 			border-color: green;
 			background-color: green;
 			color: white;
@@ -41,12 +47,19 @@
 </head>
 <body>
 	<div style="display: flex; flex-direction: column;">
-		<h3>Boolean Search Test</h3>
+		<h3>Default Boolean Search Test</h3>
 		<div style="display: flex; flex-direction: row;">
-			<input type="text" value="AND this and that (something or else) AND AND that NOT"/>
-			<button id="submit">Submit Search</button>
+			<input id="default-field" type="text" value="AND this and that (something or else) AND AND that NOT"/>
+			<button id="default-submit">Submit Default Search</button>
 		</div>
-		<div id="output-container" class="output"></div>
+		<div id="default-output-container" class="output"></div>
+		<hr />
+		<h3>Custom Boolean Search Test</h3>
+		<div style="display: flex; flex-direction: row;">
+			<input id="custom-field" type="text" value="AND this and that (something or else) AND AND that NOT"/>
+			<button id="custom-submit">Submit Custom Search</button>
+		</div>
+		<div id="custom-output-container" class="output"></div>
 	</div>
 	<script src="./bundle.js"></script>
 </body>
