--- a/examples/index.html
+++ b/examples/index.html
@@ -56,7 +56,7 @@
 		<hr />
 		<h3>Custom Boolean Search Test</h3>
 		<div style="display: flex; flex-direction: row;">
-			<input id="custom-field" type="text" value="AND this and that (something or else) AND AND that NOT"/>
+			<input id="custom-field" type="text" value="AND thi1s 123 1 and that (something or else) AND AND that NOT"/>
 			<button id="custom-submit">Submit Custom Search</button>
 		</div>
 		<div id="custom-output-container" class="output"></div>
