--- a/examples/index.html
+++ b/examples/index.html
@@ -43,6 +43,10 @@
 			background-color: red;
 			color: white;
 		}
+		.grouping {
+			display: flex;
+			align-items: center;
+		}
 	</style>
 </head>
 <body>
